# fetcher2

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
config/: Cargo.toml
config/src/: config_arg.rs  deserializer.rs  errors.rs  lib.rs  serializer.rs  traveller.rs
config/src/ctypes/: bool.rs  cenum.rs  checkable_struct.rs  cstruct.rs  ctypes.rs  enum.rs  float.rs  integer.rs  map.rs  mod.rs  option.rs  path.rs  seq.rs  string.rs  struct.rs  tuple.rs  unit.rs  vec.rs  wrapper.rs
config/src/druid/: mod.rs
config/src/druid/ctypes/: bool.rs  cenum.rs  cstruct.rs  float.rs  integer.rs  map.rs  mod.rs  option.rs  path.rs  seq.rs  string.rs  tuple.rs
config/src/druid/widgets/: drop_select.rs  int_stepper.rs  lazy.rs  list_select.rs  mod.rs
config/src/supported_types/: bool.rs  checkable_struct.rs  config_struct.rs  integer.rs  mod.rs  string.rs  supported_types.rs  vec.rs
config/src/widgets/: drop_select.rs  int_stepper.rs  list.rs  list_select.rs  mod.rs  warning_label.rs
config/tests/: enum.rs  full.rs
config_derive/: Cargo.toml
config_derive/src/: build_app.rs  config_attr.rs  config_type.rs  derives.rs  lib.rs  parse.rs  parse_from_app.rs  update_app.rs  utils.rs
config_derive/src/build_app/: enum.rs  mod.rs  struct.rs  utils.rs
config_derive/src/deserialize/: enum.rs  struct.rs
config_derive/src/parse_from_app/: enum.rs  mod.rs  struct.rs  utils.rs
config_derive/src/serialize/: enum.rs  mod.rs  struct.rs
config_derive/src/travel/: enum.rs  fields.rs  mod.rs  struct.rs  variant.rs
config_derive/src/update_app/: enum.rs  mod.rs  struct.rs  utils.rs
fetcher2/: Cargo.toml
fetcher2/src/: error.rs  lib.rs  main.rs  session.rs  settings.rs  ui.rs  utils.rs
fetcher2/src/controller/: main.rs  template.rs
fetcher2/src/data/: edit.rs  mod.rs  settings.rs  template_info.rs  win.rs
fetcher2/src/site_modules/: aai_login.rs  minimal.rs  module.rs  moodle.rs  polybox.rs  utils.rs
fetcher2/src/template/: communication.rs  mod.rs  widget_data.rs
fetcher2/src/template/node_type/: folder.rs  mod.rs  site.rs  site_data.rs  site_edit_data.rs  utils.rs
fetcher2/src/template/nodes/: node.rs  node_data.rs  node_edit_data.rs  root.rs
fetcher2/src/widgets/: header.rs  history_tree.rs  mod.rs  sub_window_widget.rs
fetcher2/src/widgets/tree/: mod.rs  opener.rs
fetcher2_cli/: Cargo.toml
fetcher2_cli/src/: main.rs
fetcher2_gui/: Cargo.toml
fetcher2_gui/src/: background_thread.rs  communication.rs  cstruct_window.rs  ctype_window.rs  edit_window.rs  main.rs  ui.rs  utils.rs
fetcher2_gui/src/controller/: edit.rs  main.rs  mod.rs  settings.rs  template.rs
fetcher2_gui/src/data/: edit.rs  mod.rs  settings.rs  template_info.rs  win.rs
fetcher2_gui/src/data/template/: mod.rs
fetcher2_gui/src/data/template/node_type/: folder.rs  mod.rs  site.rs  site_state.rs
fetcher2_gui/src/data/template/nodes/: node.rs  root.rs
fetcher2_gui/src/data/template_edit/: mod.rs
fetcher2_gui/src/data/template_edit/node_type/: folder.rs  mod.rs  site_edit.rs
fetcher2_gui/src/data/template_edit/nodes/: mod.rs  node.rs  root.rs
fetcher2_gui/src/ui/: mod.rs
fetcher2_gui/src/widgets/: file_watcher.rs  history_tree.rs  info_view.rs  mod.rs  on_save.rs  sub_window_widget.rs  widget_ext.rs
fetcher2_gui/src/widgets/tree/: header.rs  mod.rs  node.rs  opener.rs  root.rs
fetcher2_gui_derive/: Cargo.toml
fetcher2_gui_derive/src/: derives.rs  lib.rs
fetcher2_macro/: Cargo.toml
fetcher2_macro/src/: lib.rs
gui/: Cargo.toml
gui/src/: background_thread.rs  cstruct_window.rs  edit_window.rs  main.rs  ui.rs  utils.rs
gui/src/controller/: edit.rs  main.rs  settings.rs  template.rs
gui/src/data/: mod.rs  settings.rs  win.rs
gui/src/template/: communication.rs  mod.rs  widget_data.rs  widget_edit_data.rs
gui/src/template/node_type/: folder.rs  mod.rs  site_data.rs  site_edit_data.rs
gui/src/template/nodes/: mod.rs  node_data.rs  node_edit_data.rs  root_data.rs  root_edit_data.rs
gui/src/widgets/: file_watcher.rs  history_tree.rs  on_save.rs  split.rs
src/: background_thread.rs  controller.rs  cstruct_window.rs  delegate.rs  edit_window.rs  error.rs  errors.rs  main.rs  queue.rs  session.rs  settings.rs  task.rs  ui.rs  utils.rs
src/controller/: edit.rs  main.rs  mod.rs  settings.rs  template.rs
src/data/: edit.rs  mod.rs  settings.rs  template_info.rs  win.rs
src/site_modules/: aai_login.rs  minimal.rs  mod.rs  module.rs  moodle.rs  polybox.rs  utils.rs
src/sites/: minimal.rs  mod.rs  site.rs
src/template/: communication.rs  mod.rs  node.rs  template.rs  widget.rs  widget_data.rs  widget_edit_data.rs
src/template/node/: mod.rs  widget.rs
src/template/node_type/: folder.rs  mod.rs  site.rs  site_data.rs  site_edit_data.rs  utils.rs
src/template/nodes/: mod.rs  node.rs  node_data.rs  node_edit_data.rs  node_widget.rs  root.rs  root_data.rs  root_edit_data.rs  root_widget.rs
src/widgets/: file_watcher.rs  header.rs  history_tree.rs  mod.rs  on_command.rs  on_save.rs  split.rs  sub_window_widget.rs  tree.rs  widget_ext.rs
src/widgets/tree/: highlight_box.rs  mod.rs  node.rs  opener.rs  root.rs
