[package]
name = "fetcher2"
version = "0.1.0"
authors = ["GeorgOhneH <georg.schwan@vtxnet.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config_derive = { path = "./config_derive" }
config = { path = "./config" }
fetcher2_macro = { path = "./fetcher2_macro" }
clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
async-trait = "0.1"
enum_dispatch = "0.3"
async-std = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-recursion = "0.2"
lazy_static = "1"
reqwest = { version = "0.11", features = ["cookies", "multipart"] }
url = "2"
regex = "1"
html-escape = "0.2"
thiserror = "1.0"
mime_guess = "2"
sha-1 = "0.9"
dashmap = { version = "4", features = ["serde"] }
lopdf = { git = "https://github.com/J-F-Liu/lopdf", features = ["rayon"] }
ndarray = "0.15"
font-kit = { version = "0.10", features = ["loader-freetype"] }
pathfinder_geometry = "0.5.1"
rusttype = "0.9"
fontdue = "0.5.0"
phf = { version = "0.8", features = ["macros"] }
soup = "0.5"
strum = "0.20"
strum_macros = "0.20"
html5ever = "0.22"