[package]
name = "fetcher2"
version = "0.1.0"
authors = ["GeorgOhneH <georg.schwan@vtxnet.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "./config" }
fetcher2_macro = { path = "./fetcher2_macro" }
#clap = "3.0.0-beta.2"
serde = { version = "1.0", features = ["derive", "rc"] }
async-trait = "0.1"
enum_dispatch = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-recursion = "0.2"
lazy_static = "1"
reqwest = { version = "0.11", features = ["cookies", "json"] }
url = "2"
regex = "1"
html-escape = "0.2"
thiserror = "1.0"
mime_guess = "2"
sha-1 = "0.9"
dashmap = { version = "4", features = ["serde"] }
soup = "0.5"
html5ever = "0.22"
http = "0.2"
log = "0.4"
fern = "0.5"
chrono = "0.4"
urlencoding = "1.3"
quick-xml = { version = "0.22", features = ["serialize", "escape-html"] }
flume = "0.10"
atomic-counter = "1"
tracing = "0.1"
strum = "0.21"
strum_macros = "0.21"
pulldown-cmark = "0.8.0"
open = "2"
tracing-subscriber = "0.2"
notify = "5.0.0-pre.12"
crossbeam-channel = "0.5.0"
directories = "3.0"
ron = "0.6.5"

druid = { git = "https://github.com/linebender/druid.git", features = ["im", "serde", "raw-win-handle"], rev = "232314d5d9ea455c04c384916e4b72a1f85998ec" }
druid-enums = { git = "https://github.com/finnerale/druid-enums" }
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
