[workspace]

members = [
    "druid/druid",
    "druid/druid-derive",
    "druid/druid-shell",
    "druid-widget-nursery",
    "druid-widget-nursery/druid-widget-nursery-derive",
    "config",
    "config_derive",
    "fetcher2",
    "fetcher2_macro",
    "fetcher2_gui",
    "fetcher2_gui_derive",
    "fetcher2_cli",
]