[package]
name = "config"
version = "0.1.0"
authors = ["GeorgOhneH <georg.schwan@vtxnet.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
config_derive = { path = "./../config_derive" }
lazy_static = "1"
valuable = "0.1"
thiserror = "1.0"
log = "0.4"
druid = { git = "https://github.com/linebender/druid.git", features = ["im"], rev = "fc05e965c85fced8720c655685e02478e0530e94" }
druid-enums = { git = "https://github.com/finnerale/druid-enums" }
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
