[package]
name = "config"
version = "0.0.0"
authors = ["GeorgOhneH <georg.schwan@vtxnet.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
config_derive = { path = "./../config_derive" }
lazy_static = "1"
valuable = "0.1"
thiserror = "1.0"
log = "0.4"
im = "15.0.0"
druid = { path = "../druid/druid", features = ["im"], optional = true }
druid-enums = { git = "https://github.com/finnerale/druid-enums", optional = true }
druid-widget-nursery = { path = "../druid-widget-nursery", optional = true }


[features]
druid = ["dep:druid", "dep:druid-enums", "dep:druid-widget-nursery"]
