[package]
name = "config_derive"
version = "0.1.0"
authors = ["GeorgOhneH <georg.schwan@vtxnet.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
log = "0.4"
lazy_static = "1"
regex = "1"