[package]
name = "fetcher2_cli"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fetcher2 = { path = "../fetcher2" }
config = { path = "../config"}
ron = "0.7.0"
clap = { version = "3.0.14", features = ["derive"] }
tokio = "1.16.1"
anyhow = "1.0.53"