[package]
name = "fetcher2_macro"
version = "0.0.0"
authors = ["GeorgOhneH <georg.schwan@vtxnet.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro-error = "1.0"
proc-macro2 = "1.0"
once_cell = "1.7.2"
convert_case = "0.4.0"